// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostsTemplate /> should match snapshot 1`] = `
.c0 {
  width: 100%;
  max-width: 120rem;
  margin-left: auto;
  margin-right: auto;
  padding-left: calc(3.2rem / 2);
  padding-right: calc(3.2rem / 2);
}

.c11 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c15 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: none;
}

.c4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c20 {
  display: grid;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  grid-template-columns: 1fr 1fr;
  gap: 2.4rem;
}

.c20 .c10 {
  color: #333333;
  margin-top: 0;
  margin-bottom: 1.6rem;
}

.c20 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c20 a:hover {
  color: #dc143c;
}

.c21 {
  position: relative;
  padding-bottom: 56.25%;
}

.c22 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: contain;
  -webkit-transition: opacity 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out;
}

.c22:hover {
  opacity: 0.8;
}

.c23 {
  opacity: 0.6;
  margin-bottom: 0.8rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1.6rem;
}

.c23 span {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 span > svg {
  margin-right: 0.8rem;
}

.c24 {
  max-width: 100%;
}

.c18 {
  width: 100%;
  margin: 0 auto;
}

.c19 {
  margin: 0 auto;
  display: grid;
  grid-template-columns: 1fr;
  gap: 6.4rem;
}

.c26 {
  font-size: calc(1.6rem + 0.2rem);
  line-height: 1.5;
}

.c26 p {
  margin: 4.0rem 0;
}

.c26 a,
.c26 a:visited,
.c26 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c26 a:hover {
  -webkit-filter: brightness(0.8);
  filter: brightness(0.8);
}

.c26 code {
  font-family: monospace;
  color: #dc143c;
  font-size: 1.6rem;
  background: #DDDDDD;
  padding: 0.2rem;
  margin: 0.2rem;
}

.c26 pre {
  background: #000000;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 2.4rem 0;
  width: 100%;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c26 pre code {
  color: inherit;
  background: inherit;
}

.c26 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c26 img {
  max-width: 100%;
}

.c26 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c26 .image figcaption {
  font-size: 1.6rem;
  padding: 0.8rem;
  text-align: center;
  line-height: 1.3;
}

.c26 ul,
.c26 ol {
  margin: 2.4rem 4.0rem;
}

.c26 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c26 table {
  width: 100%;
  border-collapse: collapse;
  margin: 2.4rem 0;
}

.c26 table td,
.c26 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c26 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c25 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c25 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c27 {
  cursor: pointer;
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c13 > img {
  height: 15rem;
  width: 15rem;
  border-radius: 50%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: 6.4rem;
  width: 100%;
  max-width: 96rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
  gap: 3rem;
}

.c9 .c10 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c9 .c12 > img {
  border-radius: 50%;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 48rem;
}

.c2 {
  z-index: 9;
  -webkit-transition: background 0.2s ease-in-out;
  transition: background 0.2s ease-in-out;
}

.c5 {
  background: #000000;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  width: 100%;
  max-width: 26rem;
  height: 100vh;
  top: 0;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  left: -24rem;
  overflow-y: hidden;
}

.c6 {
  margin: 4.8rem auto;
  width: 100%;
}

.c3 {
  position: fixed;
  top: 2.4rem;
  background: #000000;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  left: 0.5rem;
  top: 2rem;
  color: #FFFFFF;
}

.c7 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.c7:hover {
  border-color: #dc143c;
  color: #dc143c;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 100vh;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #FFFFFF;
  -webkit-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.1);
  box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.1);
}

.c8 {
  margin-top: 6.4rem;
}

.c16 {
  margin-bottom: 6.4rem;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c17 {
  display: grid;
  grid-template-columns: 70% 30%;
}

@media (min-width:768px) {
  .c0 {
    padding-left: calc(3.2rem * 0.7);
    padding-right: calc(3.2rem * 0.7);
  }
}

@media (max-width:768px) {
  .c11 {
    font-size: calc(1.6rem * 1.2);
  }
}

@media (max-width:768px) {
  .c15 {
    font-size: calc(1.6rem * 1.2);
  }
}

@media (max-width:600px) {
  .c20 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c23 {
    font-size: calc(0.8rem * 1.6);
  }
}

@media (min-width:768px) {
  .c26 .image-style-side {
    float: right;
    max-width: 50%;
    margin: 2.4rem;
  }
}

@media (max-width:768px) {
  .c26 {
    font-size: 2rem;
  }
}

@media (max-width:450px) {
  .c13 > img {
    height: 10rem;
    width: 10rem;
  }
}

@media (max-width:450px) {
  .c9 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    gap: 1rem;
  }

  .c9 .c10 {
    text-align: center;
  }
}

@media (max-width:768px) {
  .c5 {
    left: -26rem;
  }
}

@media (max-width:768px) {
  .c3 {
    left: 0rem;
  }
}

@media (max-width:1170px) {
  .c17 {
    grid-template-columns: 1fr;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <a
        aria-label="Open or close menu"
        class="c3"
        href="#"
        title="Open menu"
      >
        <svg
          aria-hidden="true"
          aria-label="Open menu"
          class="c4"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </a>
      <main
        aria-hidden="true"
        class="c5"
      >
        <nav
          class="c6"
        >
          <a
            class="c7"
            href="/"
            target="_self"
          >
            home
          </a>
          <a
            class="c7"
            href="/contact"
            target="_self"
          >
            contact
          </a>
        </nav>
      </main>
    </div>
    <div
      class="c8"
    >
      <div
        class="c0"
      >
        <header
          class="c9"
        >
          <h1
            class="c10 c11"
          >
            <a
              class="c12 c13"
              href="/"
              target="_self"
            >
              <img
                alt="Pedro Coelho Blog"
                src="/assets/images/me.jpg"
              />
            </a>
          </h1>
          <div
            class="c14"
          >
            <h2
              class="c10 c15"
            >
              Pedro Coelho
            </h2>
            <p
              class=""
            >
              Uma descrição para o seu blog.
            </p>
          </div>
        </header>
      </div>
    </div>
    <div
      class="c16"
    >
      <div
        class="c17"
      >
        <div
          class="c0"
        >
          <div
            class="c18"
          >
            <div
              class="c19"
            >
              <div
                class="c20"
              >
                <div
                  class="c21"
                >
                  <a
                    href="/post/al-sadd-anuncia-acordo-para-liberar-xavi-mas-barcelona-nega"
                  >
                    <img
                      alt=""
                      class="c22"
                      src="https://res.cloudinary.com/rabbitz/image/upload/v1636129235/Xavi_Hernandez_Barcelona_c60f5b3e16.jpg"
                    />
                  </a>
                </div>
                <div
                  class=""
                >
                  <div
                    class="c23"
                  >
                    <span>
                      <svg
                        aria-hidden="true"
                        class="c4"
                        fill="currentColor"
                        focusable="false"
                        height="18"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM7.07 18.28c.43-.9 3.05-1.78 4.93-1.78s4.51.88 4.93 1.78C15.57 19.36 13.86 20 12 20s-3.57-.64-4.93-1.72zm11.29-1.45c-1.43-1.74-4.9-2.33-6.36-2.33s-4.93.59-6.36 2.33A7.95 7.95 0 014 12c0-4.41 3.59-8 8-8s8 3.59 8 8c0 1.82-.62 3.49-1.64 4.83zM12 6c-1.94 0-3.5 1.56-3.5 3.5S10.06 13 12 13s3.5-1.56 3.5-3.5S13.94 6 12 6zm0 5c-.83 0-1.5-.67-1.5-1.5S11.17 8 12 8s1.5.67 1.5 1.5S12.83 11 12 11z"
                        />
                      </svg>
                      <a
                        href="/author/pedro-coelho"
                      >
                        Pedro Coelho
                      </a>
                    </span>
                    <span>
                      <svg
                        aria-hidden="true"
                        class="c4"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        viewBox="0 0 24 24"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 18H4V10h16v11zm0-13H4V5h16v3z"
                        />
                      </svg>
                      19 de abr. de 2020
                    </span>
                  </div>
                  <h2
                    class="c10 c15"
                  >
                    <a
                      href="/post/al-sadd-anuncia-acordo-para-liberar-xavi-mas-barcelona-nega"
                    >
                      Al Sadd anuncia acordo para liberar Xavi, mas Barcelona nega
                    </a>
                  </h2>
                  <p
                    class="c24"
                  >
                    A novela continua: Barcelona vê em anúncio de acerto do Al Sadd como uma forma de pressão para o pagamento da multa.
                  </p>
                </div>
              </div>
              <div
                class="c20"
              >
                <div
                  class="c21"
                >
                  <a
                    href="/post/com-dois-penaltis-napoli-vira-contra-o-legia-e-se-recupera-em-seu-grupo-da-liga-europa"
                  >
                    <img
                      alt=""
                      class="c22"
                      src="https://res.cloudinary.com/rabbitz/image/upload/v1636129861/zielinski_napoli_9359de0d9d.jpg"
                    />
                  </a>
                </div>
                <div
                  class=""
                >
                  <div
                    class="c23"
                  >
                    <span>
                      <svg
                        aria-hidden="true"
                        class="c4"
                        fill="currentColor"
                        focusable="false"
                        height="18"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM7.07 18.28c.43-.9 3.05-1.78 4.93-1.78s4.51.88 4.93 1.78C15.57 19.36 13.86 20 12 20s-3.57-.64-4.93-1.72zm11.29-1.45c-1.43-1.74-4.9-2.33-6.36-2.33s-4.93.59-6.36 2.33A7.95 7.95 0 014 12c0-4.41 3.59-8 8-8s8 3.59 8 8c0 1.82-.62 3.49-1.64 4.83zM12 6c-1.94 0-3.5 1.56-3.5 3.5S10.06 13 12 13s3.5-1.56 3.5-3.5S13.94 6 12 6zm0 5c-.83 0-1.5-.67-1.5-1.5S11.17 8 12 8s1.5.67 1.5 1.5S12.83 11 12 11z"
                        />
                      </svg>
                      <a
                        href="/author/pedro-coelho"
                      >
                        Pedro Coelho
                      </a>
                    </span>
                    <span>
                      <svg
                        aria-hidden="true"
                        class="c4"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        viewBox="0 0 24 24"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 18H4V10h16v11zm0-13H4V5h16v3z"
                        />
                      </svg>
                      21 de abr. de 2020
                    </span>
                  </div>
                  <h2
                    class="c10 c15"
                  >
                    <a
                      href="/post/com-dois-penaltis-napoli-vira-contra-o-legia-e-se-recupera-em-seu-grupo-da-liga-europa"
                    >
                      Com dois pênaltis, Napoli vira contra o Legia e se recupera em seu grupo da Liga Europa
                    </a>
                  </h2>
                  <p
                    class="c24"
                  >
                    Após levar apenas um ponto nas duas primeiras rodadas, o Napoli chegou a sete se colocou em situação mais confortável para a reta final.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
    >
      <footer
        class="c25"
      >
        <div
          class="c26"
        >
          <p>
            Footer do Blog
          </p>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c27"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c4"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`

exports[`<PostsTemplate /> should match snapshot without posts 1`] = `
.c0 {
  width: 100%;
  max-width: 120rem;
  margin-left: auto;
  margin-right: auto;
  padding-left: calc(3.2rem / 2);
  padding-right: calc(3.2rem / 2);
}

.c11 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c15 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: none;
}

.c4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c18 {
  width: 100%;
  margin: 0 auto;
}

.c19 {
  padding: 3.2rem;
  text-align: center;
  font-size: 2.4rem;
}

.c20 {
  margin: 0 auto;
  display: grid;
  grid-template-columns: 1fr;
  gap: 6.4rem;
}

.c22 {
  font-size: calc(1.6rem + 0.2rem);
  line-height: 1.5;
}

.c22 p {
  margin: 4.0rem 0;
}

.c22 a,
.c22 a:visited,
.c22 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c22 a:hover {
  -webkit-filter: brightness(0.8);
  filter: brightness(0.8);
}

.c22 code {
  font-family: monospace;
  color: #dc143c;
  font-size: 1.6rem;
  background: #DDDDDD;
  padding: 0.2rem;
  margin: 0.2rem;
}

.c22 pre {
  background: #000000;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 2.4rem 0;
  width: 100%;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c22 pre code {
  color: inherit;
  background: inherit;
}

.c22 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c22 img {
  max-width: 100%;
}

.c22 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c22 .image figcaption {
  font-size: 1.6rem;
  padding: 0.8rem;
  text-align: center;
  line-height: 1.3;
}

.c22 ul,
.c22 ol {
  margin: 2.4rem 4.0rem;
}

.c22 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c22 table {
  width: 100%;
  border-collapse: collapse;
  margin: 2.4rem 0;
}

.c22 table td,
.c22 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c22 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c21 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c21 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c23 {
  cursor: pointer;
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c13 > img {
  height: 15rem;
  width: 15rem;
  border-radius: 50%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: 6.4rem;
  width: 100%;
  max-width: 96rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
  gap: 3rem;
}

.c9 .c10 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c9 .c12 > img {
  border-radius: 50%;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 48rem;
}

.c2 {
  z-index: 9;
  -webkit-transition: background 0.2s ease-in-out;
  transition: background 0.2s ease-in-out;
}

.c5 {
  background: #000000;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  width: 100%;
  max-width: 26rem;
  height: 100vh;
  top: 0;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  left: -24rem;
  overflow-y: hidden;
}

.c6 {
  margin: 4.8rem auto;
  width: 100%;
}

.c3 {
  position: fixed;
  top: 2.4rem;
  background: #000000;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  left: 0.5rem;
  top: 2rem;
  color: #FFFFFF;
}

.c7 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.c7:hover {
  border-color: #dc143c;
  color: #dc143c;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 100vh;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #FFFFFF;
  -webkit-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.1);
  box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.1);
}

.c8 {
  margin-top: 6.4rem;
}

.c16 {
  margin-bottom: 6.4rem;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c17 {
  display: grid;
  grid-template-columns: 70% 30%;
}

@media (min-width:768px) {
  .c0 {
    padding-left: calc(3.2rem * 0.7);
    padding-right: calc(3.2rem * 0.7);
  }
}

@media (max-width:768px) {
  .c11 {
    font-size: calc(1.6rem * 1.2);
  }
}

@media (max-width:768px) {
  .c15 {
    font-size: calc(1.6rem * 1.2);
  }
}

@media (min-width:768px) {
  .c22 .image-style-side {
    float: right;
    max-width: 50%;
    margin: 2.4rem;
  }
}

@media (max-width:768px) {
  .c22 {
    font-size: 2rem;
  }
}

@media (max-width:450px) {
  .c13 > img {
    height: 10rem;
    width: 10rem;
  }
}

@media (max-width:450px) {
  .c9 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    gap: 1rem;
  }

  .c9 .c10 {
    text-align: center;
  }
}

@media (max-width:768px) {
  .c5 {
    left: -26rem;
  }
}

@media (max-width:768px) {
  .c3 {
    left: 0rem;
  }
}

@media (max-width:1170px) {
  .c17 {
    grid-template-columns: 1fr;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <a
        aria-label="Open or close menu"
        class="c3"
        href="#"
        title="Open menu"
      >
        <svg
          aria-hidden="true"
          aria-label="Open menu"
          class="c4"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </a>
      <main
        aria-hidden="true"
        class="c5"
      >
        <nav
          class="c6"
        >
          <a
            class="c7"
            href="/"
            target="_self"
          >
            home
          </a>
          <a
            class="c7"
            href="/contact"
            target="_self"
          >
            contact
          </a>
        </nav>
      </main>
    </div>
    <div
      class="c8"
    >
      <div
        class="c0"
      >
        <header
          class="c9"
        >
          <h1
            class="c10 c11"
          >
            <a
              class="c12 c13"
              href="/"
              target="_self"
            >
              <img
                alt="Pedro Coelho Blog"
                src="/assets/images/me.jpg"
              />
            </a>
          </h1>
          <div
            class="c14"
          >
            <h2
              class="c10 c15"
            >
              Pedro Coelho
            </h2>
            <p
              class=""
            >
              Uma descrição para o seu blog.
            </p>
          </div>
        </header>
      </div>
    </div>
    <div
      class="c16"
    >
      <div
        class="c17"
      >
        <div
          class="c0"
        >
          <div
            class="c18"
          >
            <p
              class="c19"
            >
              Nenhum post encontrado aqui
            </p>
            <div
              class="c20"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
    >
      <footer
        class="c21"
      >
        <div
          class="c22"
        >
          <p>
            Footer do Blog
          </p>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c23"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c4"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`
